@@ -1,4 +1,4 @@
-<!--$Id: lsidebar.html,v 1.19 2003-01-10 07:34:47 natbobc Exp $-->
+<!--$Id: lsidebar.html,v 1.20 2003-06-06 17:48:12 earnie Exp $-->
 <!-- ================================================================== -->
 <!--                                                                    -->
 <!--			                   Left Sidebar                               -->
@@ -47,6 +47,11 @@
    </form>
    </td></tr>
    </table>
+   </td></tr>
+   <tr><td>
+     <p><a href="http://sourceforge.net/" target="_nw"><img
+     src="http://sourceforge.net/sflogo.php?group_id=2435&amp;type=1" width="88"
+     height="31" alt="Powered by SourceForge" border="0"></a>
    </td></tr>
 </table>
 
